sorry wrong color saved, this is the correct one

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,8 +25,9 @@ body {
 }
 
 .toast {
-  background-color: #8d8977;
-  /* color: black; */
+  /* background-color: #426b67; */
+  background-color: goldenrod;
+  color: black;
 }
 /* //remove this
 .backgroundImg {
